add sqlalchemy support, author page, book page

--- a/books_website/templates/author.html
+++ b/books_website/templates/author.html
@@ -1,6 +1,4 @@
 {% extends "layout.html" %}
 {% block content %}
-    <div>
-        <h1>Login Page</h1>
-    </div>
+    <h1>{{ author.name }}</h1>
 {% endblock content %}
