--- a/books_website/templates/about.html
+++ b/books_website/templates/about.html
@@ -1,4 +1,4 @@
 {% extends "layout.html" %}
 {% block content %}
-    <h1>About Page</h1>
+    <h1>Данный проект представляет собой библиотеку книг доступных для скачивания</h1>
 {% endblock content %}
