--- a/books_website/templates/book.html
+++ b/books_website/templates/book.html
@@ -1,4 +1,9 @@
 {% extends "layout.html" %}
 {% block content %}
-    <h1>{{ book.author.name }} - {{ book.name }}</h1>
+    <article class="article-section">
+            <h4 class="article-info"><a href="{{ url_for('authors.author', author_id=book.author.id) }}">
+                {{ book.author.name }}</a> - <a href={{ url_for('books.book', book_id=book.id) }}>{{ book.name }}</a></h4>
+            <p class="article-description">{{ book.description }}</p>
+            <p class="article-link"> Скачать: <a href="{{ url_for('static', filename='books_files/' + book.book_file) }}">.txt</a></p>
+        </article>
 {% endblock content %}
