--- a/books_website/templates/layout.html
+++ b/books_website/templates/layout.html
@@ -31,8 +31,13 @@
                 </div>
                 <!-- Navbar Right Side -->
                 <div class="navbar-nav">
-                    <a class="nav-item nav-link" href="{{ url_for('users.login') }}">Вход</a>
-                    <a class="nav-item nav-link" href="{{ url_for('users.register') }}">Регистрация</a>
+                    {% if current_user.is_authenticated %}
+                        <a class="nav-item nav-link" href="{{ url_for('users.account') }}">Профиль</a>
+                        <a class="nav-item nav-link" href="{{ url_for('users.logout') }}">Выйти</a>
+                    {% else %}
+                        <a class="nav-item nav-link" href="{{ url_for('users.login') }}">Вход</a>
+                        <a class="nav-item nav-link" href="{{ url_for('users.register') }}">Регистрация</a>
+                    {% endif %}
                 </div>
             </div>
         </nav>
