--- a/books_website/templates/new_book.html
+++ b/books_website/templates/new_book.html
@@ -1,4 +1,29 @@
 {% extends "layout.html" %}
 {% block content %}
-
+    <div class="content-section">
+        <form method="post" action="">
+            <fieldset class="form-group">
+                <legend class="border-bottom mb-4">Добавить новую книгу</legend>
+                <div class="form-group">
+                    {{ form.name.label(class="form-control-label") }}
+                    {{ form.name(class="form-control form-control-lg") }}
+                </div>
+                <div class="form-group">
+                    {{ form.description.label(class="form-control-label") }}
+                    {{ form.description(class="form-control form-control-lg") }}
+                </div>
+                <div class="form-group">
+                    {{ form.book_file.label(class="form-control-label") }}
+                    {{ form.book_file(class="form-control form-control-lg") }}
+                </div>
+                <div class="form-group">
+                    {{ form.author_id.label(class="form-control-label") }}
+                    {{ form.author_id(class="form-control form-control-lg") }}
+                </div>
+            </fieldset>
+            <div class="form-group">
+                {{ form.submit(class="btn btn-outline-info") }}
+            </div>
+        </form>
+    </div>
 {% endblock content %}
