add adding of new books, authors

--- a/books_website/templates/layout.html
+++ b/books_website/templates/layout.html
@@ -14,6 +14,15 @@
     {% else %}
         <title>Books Library</title>
     {% endif %}
+
+    {% with messages = get_flashed_messages() %}
+        {% if messages %}
+            {% for message in messages %}
+                {{ message }}
+            {% endfor %}
+        {% endif %}
+    {% endwith %}
+
 </head>
 <body>
     <!-- Page Header -->
