--- a/books_website/templates/new_book.html
+++ b/books_website/templates/new_book.html
@@ -2,6 +2,7 @@
 {% block content %}
     <div class="content-section">
         <form method="post" action="">
+            {{ form.hidden_tag() }}
             <fieldset class="form-group">
                 <legend class="border-bottom mb-4">Добавить новую книгу</legend>
                 <div class="form-group">
