--- a/books_website/templates/account.html
+++ b/books_website/templates/account.html
@@ -3,18 +3,28 @@
     {% if current_user.account_type == "admin"%}
         <h1>{{ current_user.account_type }} - {{ current_user.username }}</h1>
         <div class="form-group">
+            <label for="link_get_authors">Получить id авторов: </label>
+            <a id="link_get_authors" class="btn btn-info form-control"
+                href="{{ url_for('admin_panel.authors_ids') }}" role="button">Перейти</a>
+        </div>
+        <div class="form-group">
             <label for="link_new_book">Добавить новую книгу в базу данных: </label>
             <a id="link_new_book" class="btn btn-info form-control"
                 href="{{ url_for('admin_panel.new_book') }}" role="button">Перейти</a>
         </div>
         <div class="form-group">
+            <label for="link_new_author">Добавить нового автора в базу данных: </label>
+            <a id="link_new_author" class="btn btn-info form-control"
+               href="{{ url_for('admin_panel.new_author') }}" role="button">Перейти</a>
+        </div>
+        <div class="form-group">
             <label for="link_del_book">Удалить книгу из базы данных: </label>
-            <a id="link_del_book" class="btn btn-info form-control"
+            <a id="link_del_book" class="btn btn-danger form-control"
                 href="{{ url_for('admin_panel.del_book') }}" role="button">Перейти</a>
         </div>
         <div class="form-group">
             <label for="link_update_account">Изменить аккаунт: </label>
-            <a id="link_update_account" class="btn btn-info form-control"
+            <a id="link_update_account" class="btn btn-danger form-control"
                 href="{{ url_for('admin_panel.update_account') }}" role="button">Перейти</a>
         </div>
         {% else %}
