--- a/books_website/templates/del_book.html
+++ b/books_website/templates/del_book.html
@@ -1,4 +1,27 @@
 {% extends "layout.html" %}
 {% block content %}
-
+    <div class="content-section">
+        <form method="post" action="">
+            {{ form.hidden_tag() }}
+            <fieldset class="form-group">
+                <legend class="border-bottom mb-4">Удалить книгу по id</legend>
+                <div class="form-group">
+                    {{ form.book_id.label(class="form-control-label") }}
+                    {% if form.book_id.errors %}
+                        {{ form.email(class="form-control form-control-lg is-invalid") }}
+                        <div class="invalid-feedback">
+                            {% for error in form.email.errors %}
+                                <span>{{ error }}</span>
+                            {% endfor %}
+                        </div>
+                    {% else %}
+                        {{ form.book_id(class="form-control form-control-lg") }}
+                    {% endif %}
+                </div>
+            </fieldset>
+            <div class="form-group">
+                {{ form.submit(class="btn btn-outline-danger") }}
+            </div>
+        </form>
+    </div>
 {% endblock content %}
